<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.forgetpass.OtpVerification">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.smartyhome.app.utils.TextviewLight
            android:id="@+id/tvVerifyEmailHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/sending_verification_code"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBack" />


        <com.smartyhome.app.utils.TextviewLight
            android:id="@+id/tvVerifyEmaildetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center|start"
            android:text="@string/forget_details"
            android:textColor="@color/black_dull"
            android:textSize="@dimen/sp_14"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvVerifyEmailHead" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtVerificationCode"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_30"
            android:fontFamily="@font/poppins_light"
            android:hint="Enter Code"
            android:inputType="number"
            android:singleLine="true"
            android:text=""
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvVerifyEmaildetails" />



        <com.smartyhome.app.utils.TextviewLight
            android:id="@+id/tvdidntreceivemail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/didn_t_receive_email"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/sp_14"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/tvResendMobile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtVerificationCode" />


        <com.smartyhome.app.utils.TextviewLight
            android:id="@+id/tvResendMobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="end"
            android:text="@string/resend_code_in_30_sec"
            android:textColor="@color/backgroundclr"
            android:textSize="@dimen/sp_14"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvdidntreceivemail"
            app:layout_constraintTop_toBottomOf="@+id/edtVerificationCode" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/continuetxt"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvdidntreceivemail" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <include layout="@layout/layout_progress_bar"></include>
</androidx.constraintlayout.widget.ConstraintLayout>