<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.forgetpass.ResetPassActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_30"
    tools:context=".main.forgetpass.ResetPassActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>

    <com.smartyhome.app.utils.TextviewLight
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBack" />


    <com.smartyhome.app.utils.TextviewBold
        android:id="@+id/tvPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/new_pass"
        android:textColor="@color/backgroundclr"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtRePass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@null"
        android:drawablePadding="@dimen/dp_20"
        android:fontFamily="@font/poppins_light"
        android:gravity="bottom"
        android:hint="******"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@+id/tvPass"></androidx.appcompat.widget.AppCompatEditText>

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/primary_dark"
        android:paddingStart="@dimen/dp_30"
        app:layout_constraintEnd_toEndOf="@+id/edtRePass"
        app:layout_constraintStart_toStartOf="@+id/edtRePass"
        app:layout_constraintTop_toBottomOf="@+id/edtRePass"></View>


    <com.smartyhome.app.utils.TextviewBold
        android:id="@+id/tvConfirmPassHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/cnfm_pass"
        android:textColor="@color/backgroundclr"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtCnfmPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@null"
        android:drawablePadding="@dimen/dp_20"
        android:fontFamily="@font/poppins_light"
        android:gravity="bottom"
        android:hint="******"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPassHead"></androidx.appcompat.widget.AppCompatEditText>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/primary_dark"
        android:paddingStart="@dimen/dp_30"
        app:layout_constraintEnd_toEndOf="@+id/edtCnfmPass"
        app:layout_constraintStart_toStartOf="@+id/edtCnfmPass"
        app:layout_constraintTop_toBottomOf="@+id/edtCnfmPass"></View>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2"></Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include layout="@layout/layout_progress_bar"></include>

</androidx.constraintlayout.widget.ConstraintLayout>